--- a/far-away/src/App.css
+++ b/far-away/src/App.css
@@ -13,17 +13,12 @@
 :focus,:active{outline: none;}
 a:focus,a:active{outline: none;}
 
-nav,footer,header,aside{display: block;}
 
 html,body{
 	height: 100%;
-	width: 100%;
-	font-size: 100%;
 	line-height: 1;
 	font-size: 14px;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
+
 }
 input,button,textarea{font-family:inherit;}
 
@@ -37,3 +32,14 @@ img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*--------------------*/
+
+
+.app{
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
+.list{
+	flex: 1 1 auto;
+}
