--- a/far-away/src/App.css
+++ b/far-away/src/App.css
@@ -33,13 +33,41 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*--------------------*/
 
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Lato:ital,wght@0,400;0,700;1,400&family=Monoton&family=Russo+One&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 
 .app{
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
+	text-align: center;
+}
+.logo{
+	font-size: 60px;
+	padding: 70px 0px;
+	background-color: rgba(241, 151, 34, 0.816);
+	font-family: Monoton;
 }
 
+.form{
+	font-family: caveat;
+	font-size: 25px;
+	padding: 35px 0px;
+	background-color: #f17110;
+}
 .list{
+	display: flex;
+	justify-content: space-around;
+	color: bisque;
+	background-color: #613619;
 	flex: 1 1 auto;
+	padding: 30px 0px;
+}
+
+
+.footer{
+	font-family: Caveat;
+	font-size: 20px;
+	padding: 10px 0px;
+	background-color: #5ba4a8;
 }
