--- a/far-away/src/App.css
+++ b/far-away/src/App.css
@@ -55,15 +55,21 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	padding: 35px 0px;
 	background-color: #f17110;
 }
+
 .list{
 	display: flex;
 	justify-content: space-around;
 	color: bisque;
 	background-color: #613619;
+	font-size: 18px;
 	flex: 1 1 auto;
 	padding: 30px 0px;
 }
 
+.item button{
+	 background-color: transparent;
+	 padding-left: 5px;
+}
 
 .footer{
 	font-family: Caveat;
