--- a/far-away/src/App.css
+++ b/far-away/src/App.css
@@ -58,12 +58,15 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 .list{
 	display: flex;
-	justify-content: space-around;
-	color: bisque;
-	background-color: #613619;
-	font-size: 18px;
-	flex: 1 1 auto;
-	padding: 30px 0px;
+    align-content: stretch;
+    align-items: baseline;
+    color: bisque;
+    background-color: #613619;
+    font-size: 18px;
+    flex: 1 1 auto;
+    padding: 30px 0px;
+    flex-wrap: wrap;
+	 justify-content: space-evenly;
 }
 
 .item button{
