--- a/far-away/src/App.css
+++ b/far-away/src/App.css
@@ -1,82 +1,148 @@
-
 /*Обнуление*/
-*{
-	padding: 0;
-	margin: 0;
-	border: 0;
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
-*,*:before,*:after{
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
-
-
-html,body{
-	height: 100%;
-	line-height: 1;
-	font-size: 14px;
-
+:focus,
+:active {
+  outline: none;
 }
-input,button,textarea{font-family:inherit;}
+a:focus,
+a:active {
+  outline: none;
+}
 
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
+html,
+body {
+  height: 100%;
+  line-height: 1;
+  font-size: 14px;
+}
+input,
+button,
+textarea {
+  font-family: inherit;
+}
 
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+input::-ms-clear {
+  display: none;
+}
+button {
+  cursor: pointer;
+}
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+a,
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+ul li {
+  list-style: none;
+}
+img {
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: 400;
+}
 /*--------------------*/
 
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Lato:ital,wght@0,400;0,700;1,400&family=Monoton&family=Russo+One&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Lato:ital,wght@0,400;0,700;1,400&family=Monoton&family=Russo+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");
 
-.app{
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
-.logo{
-	font-size: 60px;
-	padding: 70px 0px;
-	background-color: rgba(241, 151, 34, 0.816);
-	font-family: Monoton;
-}
-
-.form{
-	font-family: caveat;
-	font-size: 25px;
-	padding: 35px 0px;
-	background-color: #f17110;
+.logo {
+  font-size: 60px;
+  padding: 70px 0px;
+  background-color: rgba(241, 151, 34, 0.816);
+  font-family: Monoton;
 }
 
-.list{
-	display: flex;
-    align-content: stretch;
-    align-items: baseline;
-    color: bisque;
-    background-color: #613619;
-    font-size: 18px;
-    flex: 1 1 auto;
-    padding: 40px 0px;
-    flex-wrap: wrap;
-	 justify-content: space-evenly;
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-family: caveat;
+  font-size: 25px;
+  padding: 35px 0px;
+  background-color: #f17110;
+}
+.form button {
+  background-color: #5ba4a8;
+  height: 35px;
+  width: 70px;
+  font-size: 15px;
+  font-family: serif;
+  border-radius: 30px;
 }
 
-.item button{
-	 background-color: transparent;
-	 padding-left: 5px;
+.form input {
+  background-color: #f3c776;
+  height: 35px;
+  width: 200px;
+  padding-left: 20px;
+  font-size: 15px;
+  font-family: serif;
+  border-radius: 30px;
 }
 
-.footer{
-	font-family: Caveat;
-	font-size: 20px;
-	padding: 15px 0px;
-	background-color: #5ba4a8;
+.form select{
+	background-color: #f3c776;
+	height: 35px;
+	width: 60px;
+	padding-left: 10px;
+	font-size: 15px;
+	font-family: serif;
+	border-radius: 30px;
+}
+
+.list {
+  display: flex;
+  align-content: stretch;
+  align-items: baseline;
+  color: bisque;
+  background-color: #613619;
+  font-size: 18px;
+  flex: 1 1 auto;
+  padding: 40px 0px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.item button {
+  background-color: transparent;
+  padding-left: 5px;
+}
+
+.footer {
+  font-family: Caveat;
+  font-size: 20px;
+  padding: 15px 0px;
+  background-color: #5ba4a8;
 }
