--- a/far-away/src/App.css
+++ b/far-away/src/App.css
@@ -150,7 +150,8 @@ h6 {
 
 .footer {
   font-family: Caveat;
-  font-size: 20px;
+  height: 55px;
+  font-size: 25px;
   padding: 15px 0px;
   background-color: #5ba4a8;
 }
