--- a/far-away/src/App.css
+++ b/far-away/src/App.css
@@ -130,7 +130,7 @@ h6 {
   background-color: #613619;
   font-size: 18px;
   flex: 1 1 auto;
-  padding: 40px 0px;
+  padding-top: 40px;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
@@ -146,6 +146,28 @@ h6 {
 }
 .item button {
   background-color: transparent;
+}
+
+.buttons{
+display: flex;
+flex-direction: row-reverse;
+gap: 20px;
+justify-content: center;
+background-color: #613619;
+height: 60px;
+padding: 10px 0px;
+}
+
+.buttons button{
+	background-color: #f3c776;
+	border-radius: 30px;
+
+}
+
+.buttons select{
+	background-color: #f3c776;
+	border-radius: 30px;
+
 }
 
 .footer {
